Uptade tests